--- a/GameProgrammingPatterns/GameProgrammingPatterns/GameProgrammingPatterns.vcxproj
+++ b/GameProgrammingPatterns/GameProgrammingPatterns/GameProgrammingPatterns.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="PageState.h" />
     <ClInclude Include="printfex.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="SelectState.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -151,6 +152,7 @@
     <ClCompile Include="PageState.cpp" />
     <ClCompile Include="printfex.cpp" />
     <ClCompile Include="Page.cpp" />
+    <ClCompile Include="SelectState.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
