--- a/GameProgrammingPatterns/GameProgrammingPatterns/GameProgrammingPatterns.vcxproj.filters
+++ b/GameProgrammingPatterns/GameProgrammingPatterns/GameProgrammingPatterns.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="PageState.h">
       <Filter>ヘッダー ファイル\Page\PageState</Filter>
     </ClInclude>
+    <ClInclude Include="SelectState.h">
+      <Filter>ヘッダー ファイル\Page\PageState</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -66,6 +69,9 @@
       <Filter>ソース ファイル\Page</Filter>
     </ClCompile>
     <ClCompile Include="PageState.cpp">
+      <Filter>ソース ファイル\Page\PageState</Filter>
+    </ClCompile>
+    <ClCompile Include="SelectState.cpp">
       <Filter>ソース ファイル\Page\PageState</Filter>
     </ClCompile>
   </ItemGroup>
