--- a/GameProgrammingPatterns/GameProgrammingPatterns/GameProgrammingPatterns.vcxproj
+++ b/GameProgrammingPatterns/GameProgrammingPatterns/GameProgrammingPatterns.vcxproj
@@ -138,6 +138,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="FlyWeightState.h" />
     <ClInclude Include="GameProgrammingPatterns.h" />
     <ClInclude Include="Page.h" />
     <ClInclude Include="PageState.h" />
@@ -148,6 +149,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FlyWeightState.cpp" />
     <ClCompile Include="GameProgrammingPatterns.cpp" />
     <ClCompile Include="PageState.cpp" />
     <ClCompile Include="printfex.cpp" />
