--- a/GameProgrammingPatterns/GameProgrammingPatterns/GameProgrammingPatterns.vcxproj.filters
+++ b/GameProgrammingPatterns/GameProgrammingPatterns/GameProgrammingPatterns.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="SelectState.h">
       <Filter>ヘッダー ファイル\Page\PageState</Filter>
     </ClInclude>
+    <ClInclude Include="FlyWeightState.h">
+      <Filter>ヘッダー ファイル\Page\PageState</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -72,6 +75,9 @@
       <Filter>ソース ファイル\Page\PageState</Filter>
     </ClCompile>
     <ClCompile Include="SelectState.cpp">
+      <Filter>ソース ファイル\Page\PageState</Filter>
+    </ClCompile>
+    <ClCompile Include="FlyWeightState.cpp">
       <Filter>ソース ファイル\Page\PageState</Filter>
     </ClCompile>
   </ItemGroup>
